bottom navbar now has links, most likely use

--- a/www/style/_globals.scss
+++ b/www/style/_globals.scss
@@ -4,11 +4,12 @@ Of course, there's nothing stopping you from editing the other .scss files too,
 but for convenience there are robably the first items you'll customize.
 */
 
-/* NAVBAR */
+/* NAVBARS */
 $navbar-background-color: white;
 $navbar-text-color: black;
 $navbar-border-color: #ccc;
 $navbar-font: 'Arial';
+$navbar-bottom-buttons-color: #666;
 
 /* MAIN CONTENT PANEL */
 $appcontent-background-color: #FAFAFA;
