--- a/www/style/navbar.scss
+++ b/www/style/navbar.scss
@@ -49,3 +49,8 @@
 .app {
     background: $navbar-background-color;
 }
+
+div.app-body > span > div {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
