#4 more style/color options for links in main content

--- a/www/style/_globals.scss
+++ b/www/style/_globals.scss
@@ -18,6 +18,7 @@ $appcontent-background-color: #FAFAFA;
 $appcontent-text-color: #333;
 $maincontent-text-font: 'Times New Roman';
 $appcontent-link-color: blue;
+$appcontent-link-color-clicking: blue;
 
 $maincontent-heading-font: 'Helvetica';
 $maincontent-heading-color: black;
