--- a/www/style/maincontent.scss
+++ b/www/style/maincontent.scss
@@ -8,6 +8,9 @@
         color: $appcontent-link-color;
         font-weight: bold;
     }
+    a:active {
+        color: $appcontent-link-color-clicking;
+    }
 
     h1, h2, h3, h4, h5 {
         font-family: $maincontent-heading-font;
