#2 geolocation + settins UI to toggle it

--- a/www/index.scss
+++ b/www/index.scss
@@ -3,4 +3,5 @@
 @import "style/sidebar.scss";
 @import "style/maincontent.scss";
 @import "style/map.scss";
+@import "style/modal";
 @import "style/miscellaneous.scss";
