--- a/www/style/map.scss
+++ b/www/style/map.scss
@@ -3,3 +3,11 @@
     height: 100%;
     background-color: blue;
 }
+
+/* the provided geocoder tool, on a phone in portrait mode, can be too wide and touch other side */
+.leaflet-control-geocoder.leaflet-control-geocoder-expanded {
+    max-width: calc(100% - 40px);
+}
+.leaflet-control-geocoder-form, .leaflet-control-geocoder-form input {
+    max-width: calc(100% - 70px);
+}
