#13 geocoder size fixes: results listing

--- a/www/style/map.scss
+++ b/www/style/map.scss
@@ -11,3 +11,7 @@
 .leaflet-control-geocoder-form, .leaflet-control-geocoder-form input {
     max-width: calc(100% - 70px);
 }
+.leaflet-control-geocoder-alternatives {
+    width: auto;
+}
+
